# src/Account-Api/Account.Api/Controllers/MovementController.cs
@@ -1,6 +1,7 @@
 ﻿using Account.Api.Controllers.Requests;
 using Account.Api.Documentation.Swagger.Examples;
 using Account.Application.Movement.Commands.CreateMovement;
+using Account.Application.Movement.Commands.CreateMovementByHolder;
 using Account.Application.Movement.Dto;
 using Account.Application.Movement.Queries.GetBalances;
 using MediatR;
@@ -38,6 +39,7 @@ public class MovementController(ILoggerFactory loggerFactory, IMediator mediator
     ///     <li>Invalid.Amount</li>
     ///     <li>Invalid.MovementType</li>
     ///     <li>Invalid.RequestId</li>
+    ///     <li>User.IsRequired</li>
     /// </ul>
     /// </response>
     /// <response code="401"> Unauthorized
@@ -73,6 +75,64 @@ public class MovementController(ILoggerFactory loggerFactory, IMediator mediator
     [ProducesResponseType((int)HttpStatusCode.NoContent)]
     public async Task<IActionResult> CreateMovementAsync([FromBody] CreateMovementRequest request, [FromHeader(Name = "Idempotency-Key")] Guid requestId)
         => await ExecuteAsync(async () => await _mediatorService.Send(new CreateMovementCommand(requestId, request.AccountNumber, request.Amount, request.MovementType, UserId)), HttpStatusCode.NoContent);
+
+    /// <summary>
+    /// api/movements/holder.
+    /// </summary>
+    /// <remarks>
+    /// <p>
+    /// <b> Description: </b><br />
+    /// This method create a movement by holder account. <br />
+    /// </p>
+    /// <p>
+    /// <b> Requirements: </b><br />
+    /// Is required to be authenticated. <br />
+    /// </p>
+    /// </remarks>
+    /// <response code="204">No Content</response>
+    /// <response code="400">Bad Request
+    /// <ul>
+    ///     <li>Inactive.Account</li>
+    ///     <li>Invalid.Amount</li>
+    ///     <li>Invalid.MovementType</li>
+    ///     <li>Invalid.RequestId</li>
+    ///     <li>User.IsRequired</li>
+    /// </ul>
+    /// </response>
+    /// <response code="401"> Unauthorized
+    /// <ul>
+    ///     <li>Blocked.UserUnauthorized</li>
+    /// </ul>
+    /// </response> 
+    /// <response code="404">Not Found
+    /// <ul>
+    ///     <li>NotFound.Account</li>
+    /// </ul>
+    /// </response>
+    /// <response code="409"> Conflict
+    /// <ul>
+    ///     <li>Conflict.OnlyCreditMovementAccepted</li>
+    ///     <li>Idempotency.InProgress</li>
+    ///     <li>Idempotency.KeyReuse</li>
+    /// </ul>
+    /// </response>
+    /// <response code="500">InternalServerError
+    /// <ul>
+    ///     <li>Error.Unexpected</li>
+    /// </ul>
+    /// </response>
+    /// <response code="503"> ServiceUnavailable
+    /// <ul>
+    ///     <li>Idempotency.Unavailable</li>
+    /// </ul>
+    /// </response>
+    [HttpPost("holder")]
+    [Authorize]
+    [SwaggerRequestExample(typeof(CreateMovementByHolderRequest), typeof(CreateMovementByHolderRequestExample))]
+    [ProducesResponseType((int)HttpStatusCode.NoContent)]
+    public async Task<IActionResult> CreateMovementByHolderAsync([FromBody] CreateMovementByHolderRequest request, [FromHeader(Name = "Idempotency-Key")] Guid requestId)
+        => await ExecuteAsync(async () => await _mediatorService.Send(new CreateMovementByHolderCommand(requestId, request.Amount, request.MovementType, UserId)), HttpStatusCode.NoContent);
+
 
     /// <summary>
     /// api/movements/balances.
