# src/Account-Api/Account.Api/Controllers/Requests/CreateMovementByHolderRequest.cs
@@ -1,0 +1,19 @@
+﻿using Account.Core.MovementAggregate.Enumerators;
+
+namespace Account.Api.Controllers.Requests;
+
+public class CreateMovementByHolderRequest
+{
+    /// <summary>
+    /// The amount of bank movement
+    /// </summary>
+    /// <example>300</example>
+    public decimal Amount { get; set; }
+
+    /// <summary>
+    /// The Movement Types.
+    /// The accepted values is [C] C or [D] D
+    /// </summary>
+    /// <example>C</example>
+    public MovementTypeEnum MovementType { get; set; }
+}
