# src/Account-Api/Account.Api/Documentation/Swagger/Definition/swagger.json
@@ -75,7 +75,7 @@
             }
           },
           "400": {
-            "description": "Bad Request\r\n           <ul><li>Document.IsInvalid</li><li>Document.IsRequired</li><li>Document.MustBeInformed</li></ul>"
+            "description": "Bad Request\r\n           <ul><li>Holder.IsRequired</li><li>Holder.MustBeInformed</li><li>Invalid.RequestId</li><li>User.IsRequired</li></ul>"
           },
           "401": {
             "description": "Unauthorized\r\n           <ul><li>Blocked.UserUnauthorized</li></ul>"
@@ -110,6 +110,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request\r\n           <ul><li>User.IsRequired</li></ul>"
           },
           "401": {
             "description": "Unauthorized"
@@ -175,7 +178,79 @@
             "description": "No Content"
           },
           "400": {
-            "description": "Bad Request\r\n            <ul><li>Inactive.Account</li><li>Invalid.AccountNumber</li><li>Invalid.Amount</li><li>Invalid.MovementType</li><li>Invalid.RequestId</li></ul>"
+            "description": "Bad Request\r\n            <ul><li>Inactive.Account</li><li>Invalid.AccountNumber</li><li>Invalid.Amount</li><li>Invalid.MovementType</li><li>Invalid.RequestId</li><li>User.IsRequired</li></ul>"
+          },
+          "401": {
+            "description": "Unauthorized\r\n           <ul><li>Blocked.UserUnauthorized</li></ul>"
+          },
+          "404": {
+            "description": "Not Found\r\n            <ul><li>NotFound.Account</li></ul>"
+          },
+          "409": {
+            "description": "Conflict\r\n           <ul><li>Conflict.OnlyCreditMovementAccepted</li><li>Idempotency.InProgress</li><li>Idempotency.KeyReuse</li></ul>"
+          },
+          "500": {
+            "description": "InternalServerError\r\n            <ul><li>Error.Unexpected</li></ul>"
+          },
+          "503": {
+            "description": "ServiceUnavailable\r\n           <ul><li>Idempotency.Unavailable</li></ul>"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "Bearer": [ ]
+          }
+        ]
+      }
+    },
+    "/api/movements/holder": {
+      "post": {
+        "tags": [
+          "Movement"
+        ],
+        "summary": "api/movements/holder. (Auth)",
+        "description": "<p>\r\n  <b> Description: </b>\r\n  \r\n\r\n            This method create a movement by holder account. \r\n</p>\r\n<p>\r\n  <b> Requirements: </b>\r\n  \r\n\r\n            Is required to be authenticated. \r\n</p>",
+        "parameters": [
+          {
+            "name": "Idempotency-Key",
+            "in": "header",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateMovementByHolderRequest"
+              },
+              "example": {"amount":300,"movementType":67}
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateMovementByHolderRequest"
+              },
+              "example": {"amount":300,"movementType":67}
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateMovementByHolderRequest"
+              },
+              "example": {"amount":300,"movementType":67}
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request\r\n            <ul><li>Inactive.Account</li><li>Invalid.Amount</li><li>Invalid.MovementType</li><li>Invalid.RequestId</li><li>User.IsRequired</li></ul>"
           },
           "401": {
             "description": "Unauthorized\r\n           <ul><li>Blocked.UserUnauthorized</li></ul>"
@@ -283,6 +358,21 @@
           "holder": {
             "type": "string",
             "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "CreateMovementByHolderRequest": {
+        "type": "object",
+        "properties": {
+          "amount": {
+            "type": "number",
+            "description": "The amount of bank movement",
+            "format": "double",
+            "example": 300
+          },
+          "movementType": {
+            "$ref": "#/components/schemas/MovementTypeEnum"
           }
         },
         "additionalProperties": false
