# src/Account-Api/Account.Api/Documentation/Swagger/Examples/CreateMovementByHolderRequestExample.cs
@@ -1,0 +1,15 @@
+﻿using Account.Api.Controllers.Requests;
+using Account.Core.MovementAggregate.Enumerators;
+using Swashbuckle.AspNetCore.Filters;
+
+namespace Account.Api.Documentation.Swagger.Examples;
+
+public class CreateMovementByHolderRequestExample : IExamplesProvider<CreateMovementByHolderRequest>
+{
+    public CreateMovementByHolderRequest GetExamples()
+        => new()
+        {
+            Amount = 300,
+            MovementType = MovementTypeEnum.C
+        };
+}
